[package]
name = "ftcreate"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["syntect"]

[dependencies]
serde_json = "1.0.89"

egui = {version = "0.27.2" }
egui_extras = {version = "0.27.2", features = ["image"]}

tokio = {version = "1.28.2", features = ["sync", "rt-multi-thread"]}

eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

image = { version = "0.24", default-features = false, features = ["png"] }

syntect = { version = "5", optional = true, default-features = false, features = [
    "default-fancy",
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
enum-map = { version = "2", features = ["serde"] }
tempfile = "3.5.0"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
ftc_http = {git = "https://github.com/CyanBlob/ftc_http", branch = "async"}
mlua = { version = "0.9.1", features = ["luajit", "vendored"] }
#ftc_http = { path = "../ftc_http" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
mlua = { version = "0.9.8", features = ["lua54", "vendored"] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
